# forecasting

./: .dockerignore  .editorconfig  .gitignore  .npmrc  CLAUDE.md  Dockerfile  README.md  STORYBOOK_FIX_SUMMARY.md  STORYBOOK_SETUP.md  TESTING.md  cloudbuild.yaml  competition-dashboard.jsx  eslint.config.mjs  instrumentation-client.ts  instrumentation.ts  local-pg-container.yaml  middleware.ts  next.config.mjs  package-lock.json  package.json  proxy.test.ts  proxy.ts  sentry.edge.config.ts  sentry.server.config.ts  testcontainers-implementation-plan.md  update_deps.sh  vercel.json  vitest.config.ts
.config/: kysely.config.ts
.storybook/: README.md  ServerComponentWrapper.tsx  main.ts  preview.ts
2024/: Build CSVs.ipynb  ETL.ipynb  Notebook.ipynb  pyproject.toml
2024/data/: categories.csv  forecasts.csv  people.csv  props.csv  users.csv
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
components/: environment-badge.tsx  environment-banner.tsx  forecast-card.tsx  impersonation-banner-wrapper.tsx  impersonation-banner.tsx  inaccessible-page.tsx  incomplete-indicator.tsx  local-date.tsx  markdown.tsx  page-heading.stories.tsx  page-heading.tsx  resolution-select-widget.tsx
docs/: idp-migration-plan.md  server-actions-best-practices.md
etl_notebooks/: ETL.ipynb  Notebook.ipynb  raw_probabilities.csv
forecast-app/: README.md  local-pg-container.yaml  package-lock.json  package.json
hooks/: getBrowserTimezone.ts  use-server-action.ts  useCategories.ts  useCompetitions.ts  useCurrentUser.ts  useFeatureFlag.ts  useLogout.ts  usePropsFilter.ts  (+1 more)
(+562 files in other folders)
