[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Ethan Swan <ethanpswan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
altair = "^5.4.1"
pandas = "^2.2.2"
sqlalchemy = "^2.0.33"
python-dotenv = "^1.0.1"
psycopg = {extras = ["binary"], version = "^3.2.1"}

[tool.poetry.group.dev.dependencies]
polars = "^1.6.0"
jupyterlab = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
